--- a/index.html
+++ b/index.html
@@ -104,18 +104,7 @@
     </div>
 
     <script>
-        // === CONFIGURATION START === //
-        
-        /*
-        **********************************************************************************
-        * CRITICAL STEP: REPLACE THIS ENTIRE STRING WITH YOUR DEPLOYED GOOGLE APPS SCRIPT URL!
-        * * Deploy the 'google_apps_script.gs' file as a Web App (access: Anyone) and paste 
-        * the resulting URL here to make the app functional.
-        **********************************************************************************
-        */
-        // START: PASTE YOUR DEPLOYED URL HERE
-        const GAS_WEB_APP_URL = "YOUR_APPS_SCRIPT_URL_MUST_BE_PASTED_HERE_TO_WORK"; 
-        // END: PASTE YOUR DEPLOYED URL HERE
+        const GAS_WEB_APP_URL = "https://script.google.com/macros/s/AKfycbzAkQl4I1NyC93ea2CmDMsxdiyJJ195QRF4GiLqf0CdIXrF-P3m3yr_MFpo-1Llik4T/exec"; 
         
         // Polling interval (how often to check for new messages in milliseconds)
         const POLLING_INTERVAL = 1000; 
