--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pigeon Network</title>
+    <title>Vexora(by zaydon)</title>
     <link rel="icon" type="image/x-icon" href="https://i.ibb.co/1G4MT5Fs/output-onlinepngtools-1.png">
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
