--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vexora(by zaydon)</title>
+    <title>Vexora</title>
     <link rel="icon" type="image/x-icon" href="https://i.ibb.co/qMdzn35L/Gemini-Generated-Image-h82pl4h82pl4h82p.png">
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
