--- a/index.html
+++ b/index.html
@@ -1203,7 +1203,7 @@
             sendText.textContent = 'Send';
             
             if (isAuth) {
-                initialMessage.textContent = `Welcome to Pigeon Network, ${currentUsername}! Fetching messages...`;
+                initialMessage.textContent = `Welcome to Vexora, ${currentUsername}! Fetching messages(takes a few seconds)...`;
             } else {
                 initialMessage.textContent = 'Sign in or continue as a guest to chat.';
                 initialMessage.classList.remove('hidden');
